# dawstream

./: .env  Cargo.toml  docker-compose.yml
dawbackend/: Cargo.toml
dawbackend/src/: main.rs
dawbackend/src/audio/: mod.rs  streaming.rs
dawbackend/src/dal/: mod.rs  track.rs
dawbackend/src/dal/entity/: instrument.rs  mod.rs  prelude.rs  track.rs
dawbackend/src/error/: mod.rs
dawbackend/src/track/: mod.rs
dawclient/: Cargo.toml  Trunk.toml  index.html  index.scss  tailwind.config.js
dawclient/src/: context_panel.rs  document.rs  instrument.rs  lib.rs  play.rs  tempo.rs  worker.rs  workerconsumer.rs
dawlib/: Cargo.toml
dawlib/src/: lib.rs
dawmacros/: Cargo.toml
dawmacros/src/: lib.rs
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20230313_161629_instrument.rs
