[package]
name = "dawbackend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.10", features = ["ws", "headers"] }
tower-http = { version = "0.4.0", features = ["fs", "trace", "cors"] }
tokio = { version = "1.26.0", features = ["full"] }
tracing-subscriber = { version = "0.3.1", features = ["env-filter"] }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tokio-tungstenite = "0.18.0"
tracing = "0.1"
headers = "0.3"
rand = "0.8.5"
wavegen = "0.4.1"
hound = "3.5.0"
dawlib = { path = "../dawlib" }
serde_json = "1.0"
dotenvy = "0.15"
axum-macros = "0.3.6"

[dependencies.sea-orm]
version = "0.11.1"
features = [
    "debug-print",
    "runtime-tokio-rustls",
    "sqlx-postgres",
]