[package]
name = "dawclient"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.20", features = ["csr"] }
gloo-net = "0.2.6"
wasm-bindgen-futures = "0.4.34"
futures = "0.3"
yew-agent = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
gloo-console = "0.2.3"
wasm-bindgen = "0.2.84"
gloo-timers = "0.2.6"
js-sys = "0.3.1"
dawlib = { path = "../dawlib" }
yewdux = "0.9.2"
claxon= "0.4.3"
serde_json = "1.0"
yew-hooks = "0.2.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'AudioContext',
  'AudioDestinationNode',
  'AudioWorklet',
  'AudioWorkletProcessor',
  'AudioBuffer',
  'AudioBufferSourceNode',
  'AudioNode',
  'AudioParam',
  'GainNode',
  'OscillatorNode',
  'OscillatorType',
  'MediaStreamAudioDestinationNode', 
  'MediaStreamTrack',
  'HtmlCollection'
]
